# GOATTech

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README-RU.md  README.md  TEMPLATE  build.sh  compile_flags.txt  configure.sh  overlay.qrc
.github/workflows/: ci.yml  codeql-analysis.yml  macos.yml  release.yml  ubuntu.yml  upload_asset.sh  windows.yml
assets/: overlay.qrc
assets/keyboard/: placement.json
forms/: mainwindow.ui  overlay_eye.ui  overlay_mouse.ui
include/vnepogodin/: JoyShockLibrary.h  connection.hpp  header.hpp  html.hpp  io_service_pool.hpp  logger.hpp  mainwindow.h  mainwindow.hpp  mainwindow_gamepad.h  overlay.h  overlay_eye.h  overlay_gamepad.h  overlay_mouse.h  recorder.hpp  reply.hpp  request.hpp  request_handler.hpp  request_parser.hpp  server.hpp  service_pool.hpp  utils.hpp
include/vnepogodin/platform/unix/: mainwindow.h
include/vnepogodin/platform/windows/: mainwindow.h
modules/settings/: CMakeLists.txt  README.md  settings.qrc
modules/settings/src/: main.cpp  settings.cpp  settings.hpp  settings.ui  style.xml  utils.hpp
modules/webui/: CMakeLists.txt  charts.qrc
modules/webui/include/vnepogodin/: webui.hpp  webuihandler.hpp
modules/webui/res/: app.js  index.html  index.js  style.css
modules/webui/src/: main.cpp  webui.cpp  webuihandler.cpp
scripts/: clang-format.sh  format_file.sh
src/: CMakeLists.txt  compile_flags.txt  connection.cpp  html.cpp  io_service_pool.cpp  main.cpp  main.rs  mainwindow.cpp  mime_types.cpp  overlay.cpp  overlay_eye.cpp  overlay_gamepad.cpp  overlay_mouse.cpp  reply.cpp  request_handler.cpp  request_parser.cpp  server.cpp
src/cmake/: CompilerWarnings.cmake
src/forms/: mainwindow_gamepad.ui
src/http/: mod.rs  service_pool.rs  worker.rs
src/include/vnepogodin/: buffer.hpp  logger.hpp  mainwindow.hpp  overlay_mouse.hpp  recorder.hpp  uiohook_helper.hpp  utils.hpp
src/src/: main.cpp  mainwindow.cpp  overlay.cpp  overlay_keyboard.cpp  overlay_mouse.cpp  uiohook_helper.cpp
unix/: CMakeLists.txt
unix/cmake/: FilesystemResolver.cmake
unix/forms/: mainwindow.ui  overlay.ui
unix/include/vnepogodin/: buffer.hpp  input_data.hpp  logger.hpp  mainwindow.hpp  overlay.h  overlay.hpp  overlay_keyboard.hpp  overlay_mouse.h  overlay_mouse.hpp  recorder.hpp  uiohook_helper.hpp  utils.hpp
unix/src/: input_data.cpp  main.cpp  mainwindow.cpp  overlay.cpp  overlay_gamepad.cpp  overlay_keyboard.cpp  overlay_mouse.cpp  uiohook_helper.cpp
